commit resp css

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,10 @@ body{
     background-color: #161616;
 }
 
+.logo img{
+    width: 100px;
+}
+
 .header-init{
     display: flex;
     flex-direction: column;
@@ -85,6 +89,25 @@ body{
     margin-left: 5px;
 }
 
-.logo img{
-    width: 100px;
+
+
+/* Resp */
+
+@media ( width <= 520px){
+
+    .logo img{
+        width: 50px;
+    }
+
+    .header-img{
+        height: 90vh;
+    }
+
+    .header-img h1{
+        font-size: 20px;
+    }
+
+    .header-img p{
+        font-size: 12px;
+    }
 }
