commit ajustes front e resp

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -61,33 +61,46 @@ body{
     text-shadow: 5px 5px 10px #161616;
 }
 
-.header-img button{
-    margin-top: 20px;
+.btn-pulse{
+    display: inline-block;
+    margin: 20px 0;
     border: none;
-    background-color: #161616;
-    padding: 10px 20px;
-    border-radius: 22px;
-    color: #a2ffbc;
-    font-size: 18px;
-    align-items: center;
-    justify-content: center;
+    background-color: #a2ffbc;
+    padding: 15px 30px;
+    border-radius: 24px;
+    color: #161616;
+    font-size: 20px;
     font-family: "Rajdhani", sans-serif;
     font-weight: 500;
     cursor: pointer;
-    transition: .3s ease-in;
-    box-shadow: 5px 5px 10px #161616;
+    transition: .3s ease-in-out;
+    animation: pulsar 1.5s infinite ease-in-out;
+    transform-origin: center; 
+    box-sizing: border-box;  
+    will-change: transform;
 }
 
-.header-img button:hover{
-    background-color: #a2ffbc;
-    color: #161616;
+.btn-pulse:hover{
+    background-color: #161616;
+    color: #a2ffbc;
 
 }
 
 .header-img button i{
-    font-size: 20px;
+    font-size: 18px;
     margin-left: 5px;
 }
+
+@keyframes pulsar {
+    0%, 100% {
+      transform: scale(1);
+      box-shadow: 0 0 10px #fafafa;
+    }
+    50% {
+      transform: scale(1.03);
+      box-shadow: 0 0 20px #fafafa;
+    }
+  }
 
 
 
@@ -106,11 +119,18 @@ body{
     }
 
     .header-img h1{
-        margin-top: 120px;
+
         font-size: 22px;
     }
 
-    .header-img p{
+    .header-img .p1,  .p2{
         font-size: 14px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .header-img .p2{
+        color: #161616;
     }
 }
